@@ -1,21 +1,0 @@
-package Net::Statsd::Tiny::Types;
-
-# ABSTRACT: This is no longer used
-
-use strict;
-use warnings;
-
-our $VERSION = 'v0.3.2';
-
-=head1 DESCRIPTION
-
-This module has been renamed to L<Net::Statsd::Lite::Types>.
-
-=head1 append:AUTHOR
-
-The initial development of this module was sponsored by Science Photo
-Library L<https://www.sciencephoto.com>.
-
-=cut
-
-1;
