@@ -4,6 +4,9 @@ Revision history for Net-Statsd-Tiny
   [Incompatable Changes]
   - Removed deprecated add_set method.
 
+  [Other Changes]
+  - Removed stub Net::Statsd::Tiny::Types module.
+
 v0.3.1    2018-05-02 20:58:00+01:00 Europe/London
   [Documentation]
   - Rewrote the section about data validation.
